--- a/Java2/index.html
+++ b/Java2/index.html
@@ -14,6 +14,9 @@
         </div>
     <div class="card">
         <img src="Rectangle 2.png">
+        <div id="time">
+            
+        </div>
         <div class="section">
             <div class="txt-btn">
             <input type="text" placeholder="Note" id="textbox">
