--- a/Java2/index.html
+++ b/Java2/index.html
@@ -14,6 +14,9 @@
         </div>
     <div class="card">
         <img src="Rectangle 2.png">
+        <div id="date">
+
+        </div>
         <div id="time">
             
         </div>
