--- a/Weather/markup.html
+++ b/Weather/markup.html
@@ -30,11 +30,20 @@
     </section>
 
     <section class="blurred-section">
+
+        <div class="search-location2">
+            <input class="search-type" type="text" placeholder="Search Location...">
+            <img src="./IMG/fa_search.svg">
+        </div>
+
+
             <p class="weather-details">Weather details...</p>
 
             <div class="info">
                 <h1 class="info-header">THUNDERSTORM WITH LIGHT DRIZZLE</h1>
 
+
+            <section class="temperature-section">
                 <div class="temp-max">
                     <p>Temp max</p>
                         <div class="temp-info">
@@ -75,6 +84,7 @@
                         </div>
                     
                 </div>
+              </section>
             </div>
       </section>
     </div>
