--- a/Todo/index.html
+++ b/Todo/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="section">
             <div class="txt-btn">
-            <input type="text" placeholder="Note" id="textbox">
+            <input type="text" placeholder="Note" class="text-box">
             <button class="add">
                 <img src="Vector.svg">
             </button>
